11-18 cặp nhật endpont giohang ko còn quản lý bienthe.tangluot nữa, và ko có giớ hạn số quà tặng nữa
